# Test-task

./: CMakeLists.txt  README.md
include/: file_reader.h  flight_code.h
source/: file_reader.cpp  flight_code.cpp  main.cpp
test_input/: file_1  file_2
